/*
 * Copyright 2016-present the IoT DC3 original author or authors.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *      https://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

package api.common.driver;

import "api/common/page.proto";

/*
Config
*/
option java_package = "io.github.pnoker.api.common.driver";
option java_outer_classname = "QueryPageProto";
option objc_class_prefix = "Driver";
option java_multiple_files = true;

/*
Page Device Query
设备分页查询结构体，用于分页查询设备信息
*/
message GrpcPageDeviceQuery {
  /*
  Page
  分页信息，包含页码、页大小、总数等
  */
  GrpcPage page = 1;

  /*
  租户ID
  标识所属租户
  */
  int64 tenant_id = 2;

  /*
  驱动ID
  标识设备所属的驱动
  */
  int64 driver_id = 3;

  /*
  Device ID
  设备ID，用于精确查询特定设备
  */
  int64 device_id = 4;
}

/*
Page Point Query
点位分页查询结构体，用于分页查询点位信息
*/
message GrpcPagePointQuery {
  /*
  Page
  分页信息，包含页码、页大小、总数等
  */
  GrpcPage page = 1;

  /*
  租户ID
  标识所属租户
  */
  int64 tenant_id = 2;

  /*
  驱动ID
  标识点位所属的驱动
  */
  int64 driver_id = 3;

  /*
  Device ID
  设备ID，用于查询特定设备下的点位
  */
  int64 device_id = 4;

  /*
  Profile ID
  配置模板ID，用于查询特定模板下的点位
  */
  int64 profile_id = 5;

  /*
  Point ID
  点位ID，用于精确查询特定点位
  */
  int64 point_id = 6;
}



